# kate-4.8.0

./: CMakeLists.txt
doc/kate/: index.cache.bz2
doc/kwrite/: index.cache.bz2
kate/app/: CMakeLists.txt  kateapp.cpp  kateapp.h  kateconfigdialog.cpp  kateconfigplugindialogpage.cpp  kateconfigplugindialogpage.h  katedocmanager.cpp  katedocmanager.h  katemain.cpp  katemain.h  katemainwindow.cpp  katemainwindow.h  katemainwindowadaptor.cpp  katemwmodonhddialog.cpp  katepluginmanager.cpp  katerunninginstanceinfo.cpp  katesession.cpp  katesession.h  kateviewmanager.cpp  kateviewmanager.h  kateviewspace.cpp  kateviewspace.h
kate/data/: kateui.rc
kate/html/: search.html
kate/plugins/: CMakeLists.txt
kate/plugins/fastopen/: CMakeLists.txt  Messages.sh  katefastopen.desktop  plugin_katefastopen.cpp  plugin_katefastopen.h  ui.rc
kate/plugins/filestore/: CMakeLists.txt  Messages.sh  katefilestore.desktop  plugin_katefilestore.cpp  plugin_katefilestore.h
kate/plugins/recentfileviewer/: CMakeLists.txt  Messages.sh  katerecentfileviewer.desktop  plugin_katerecentfileviewer.cpp  plugin_katerecentfileviewer.h  ui.rc
kate/plugins/recursivepart/: CMakeLists.txt  Messages.sh  katerecursivepart.desktop  plugin_katerecursivepart.cpp  plugin_katerecursivepart.h
kate/plugins/webbrowser/: CMakeLists.txt  Messages.sh  katewebbrowser.desktop  plugin_katewebbrowser.cpp  plugin_katewebbrowser.h  ui.rc
ktexteditor/: attribute.h  codecompletioninterface.h  codecompletionmodel.h  codecompletionmodelcontrollerinterface.cpp  codecompletionmodelcontrollerinterface.h  document.h  markinterface.h  view.h
kwrite/: CMakeLists.txt  ktmainwindow.cpp  ktmainwindow.h  kwritemain.cpp
part/: CMakeLists.txt  images.qrc
part/buffer/: katetextblock.cpp  katetextblock.h  katetextbuffer.cpp  katetextbuffer.h  katetextloader.h
part/completion/: kateargumenthintmodel.cpp  kateargumenthintmodel.h  kateargumenthinttree.cpp  kateargumenthinttree.h  katecompletiondelegate.h  katecompletionmodel.cpp  katecompletionmodel.h  katecompletiontree.cpp  katecompletiontree.h  katecompletionwidget.cpp  katecompletionwidget.h  katenewcompletion.cpp  katenewcompletion.h  katewordcompletion.cpp  katewordcompletion.h  katexhpcompletion.cpp  katexhpcompletion.h
part/data/: katepartsimpleui.rc  katepartui.rc
part/dialogs/: katedialogs.cpp
part/document/: katebuffer.cpp  katebuffer.h  katedocument.cpp  katedocument.h
part/render/: katelayoutcache.cpp  katerenderer.cpp  katerenderer.h  nano.save
part/script/: katecommandlinescript.h  katescriptaction.cpp  katescriptaction.h  katescriptdocument.cpp  katescriptdocument.h  katescriptview.cpp  katescriptview.h  katetemplatescript.cpp
part/swapfile/: kateswapfile.cpp  kateswapfile.h
part/syntax/: katecodefolding.cpp  katecodefolding.h  kateextendedattribute.h  katehighlight.cpp  katehighlight.h  katehighlighthelpers.h  katesyntaxdocument.cpp  katesyntaxdocument.h  katesyntaxmanager.cpp  katesyntaxmanager.h
part/tests/: bug213964.cpp  (+5 more)
(+73 files in other folders)
